2015-03-18  Jon Turney  <jon.turney@dronecode.org.uk>
	    Nick Clifton  <nickc@redhat.com>

	PR binutils/18087
	* gas/i386/dw2-compress-1.d: Do not expect the .debug_abbrev or
	.debug_info sections to be compressed.

2015-03-17  Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>

	* gas/i386/i386.exp: Add new znver1 test cases.
	* gas/i386/arch-13-znver1.d: New.
	* gas/i386/arch-13.d: New.
	* gas/i386/arch-13.s: New.
	* gas/i386/clzero.d: New.
	* gas/i386/clzero.s: New.
	* gas/i386/nops-1-znver1.d: New.
	* gas/i386/x86-64-arch-3-znver1.d: New.
	* gas/i386/x86-64-arch-3.d: New.
	* gas/i386/x86-64-arch-3.s: New.
	* gas/i386/x86-64-clzero.d: New.
	* gas/i386/x86-64-nops-1-znver1.d: New.

2015-03-13  Andrew Bennett  <andrew.bennett@imgtec.com>

	* gas/mips/mips.exp: Added branch constraints testcase.
	* gas/mips/r6-branch-constraints.s: New test.
	* gas/mips/r6-branch-constraints.l: New test.

2015-03-13  Andrew Bennett  <andrew.bennett@imgtec.com>

	* gas/mips/r6.s: Add evp and dvp instructions.
	* gas/mips/r6.d: Likewise.
	* gas/mips/r6-n32.d: Likewise.
	* gas/mips/r6-n64.d: Likewise.

2015-03-13  Jiong Wang  <jiong.wang@arm.com>

	* gas/aarch64/diagnostic.s: New testcases.
	* gas/aarch64/diagnostic.l: New error match.

2015-03-13  Jiong Wang  <jiong.wang@arm.com>

	* gas/aarch64/tail_padding.s: New testcase.
	* gas/aarch64/tail_padding.d: New expectation file.

2015-03-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* gas/s390/zarch-z13.d: Add more z13 instructions.
	* gas/s390/zarch-z13.s: Likewise.

2015-03-05  Renlin Li  <renlin.li@arm.com>

	* gas/arm/dis-data.d: Adjust the desired output.
	* gas/arm/dis-data2.d: Ditto.

2015-03-10  Renlin Li  <renlin.li@arm.com>

	* gas/aarch64/ldst-reg-uns-imm.d: Adjust expected output.
	* gas/aarch64/ldst-reg-unscaled-imm.d: Likewise.
	* gas/aarch64/reloc-insn.d: Likewise.

2015-03-10  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/codealign.d: Add test for code section alignment.