@@ -1847,7 +1847,7 @@ linker input file.
 Compress DWARF debug sections using zlib.  The debug sections are
 renamed to begin with @samp{.zdebug} instead of @samp{.debug}.  Note -
 if compression would actually make a section @emph{larger} then it is
-not compressed or renamed. 
+not compressed or renamed.
 
 @item --decompress-debug-sections
 Decompress DWARF debug sections using zlib.  The original section
